<resources>
    <string name="app_name">PIGS</string>
    <string name="createExercise">Create Exercise</string>
    <string name="createWorkout">Create A Workout</string>
    <string name="exerciseName">Exercise Name</string>
    <string name="exerciseCategory">Exercise Category</string>
    <string name="schedule">Schedule</string>
    <string name="workouts">Workouts</string>
    <string name="exercises">Exercises</string>
    <string name="progress">Progress</string>
    <string name="addProgress">Add Progress</string>
    <string name="weights">Weights</string>
    <string name="reps">Reps</string>
    <string name="sets">Sets</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="incorrectLogin">Username or password incorrect</string>
</resources>
