<?xml version="1.0" encoding="utf-8"?>
<!-- Use DrawerLayout as root container for activity -->
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">


    <!-- Layout to contain contents of main body of screen (drawer will slide over this) -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="#25448C"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />


        <TextView
            android:id="@+id/addProgressTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addProgress"
            android:textSize="36sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/dropdown2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:spinnerMode="dialog"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/weights"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/exerciseName"
            android:ems="10"
            android:hint="@string/weights"
            android:inputType="number" />

        <EditText
            android:id="@+id/reps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/exerciseCategory"
            android:ems="10"
            android:hint="@string/reps"
            android:inputType="number" />

        <EditText
            android:id="@+id/sets"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/exerciseCategory"
            android:ems="10"
            android:hint="@string/sets"
            android:inputType="number" />

        <TextView
            android:id="@+id/progressDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Select A Date "
            android:padding="5px"
            android:textSize="18sp" />

        <Button
            android:id="@+id/add_progress_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="addProgress"
            android:padding="18dp"
            android:text="@string/addProgress"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:orientation="vertical">

            <Button
                android:id="@+id/viewProgress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="goToViewProgress"
                android:text="View Progress"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>

    <!-- Container for contents of drawer - use NavigationView to make configuration easier -->
    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/menu"
        app:headerLayout="@layout/nav_header" />

</android.support.v4.widget.DrawerLayout>