<?xml version="1.0" encoding="utf-8"?>
<!-- Use DrawerLayout as root container for activity -->
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">


    <!-- Layout to contain contents of main body of screen (drawer will slide over this) -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="#25448C"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:titleTextColor="#ddd">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#25448C"
                android:gravity="center|end"
                android:orientation="horizontal"
                android:paddingRight="8dp">

                <ImageButton
                    android:id="@+id/imageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ic_account_circle_black_24dp"
                    android:onClick="goToLogin"
                    app:srcCompat="@drawable/ic_account_circle_black_24dp" />

            </LinearLayout>

        </android.support.v7.widget.Toolbar>


        <TextView
            android:id="@+id/registerTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="36sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/register_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/exerciseName"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="text|textCapSentences|textPassword" />

        <EditText
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/exerciseName"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/register_user_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="registerUser"
            android:padding="18dp"
            android:text="@string/register"
            android:textSize="18sp" />

    </LinearLayout>

    <!-- Container for contents of drawer - use NavigationView to make configuration easier -->
    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/menu"
        app:headerLayout="@layout/nav_header" />

</android.support.v4.widget.DrawerLayout>