<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/createExerciseTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/createExercise"
            android:textSize="36sp"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="18dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/exercise_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/exerciseName"
                    android:paddingBottom="18dp"
                    android:textSize="24sp" />

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/exercise_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/exerciseCategory"
                    android:paddingBottom="18dp"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/create_exercise_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="18dp"
                    android:text="@string/createExercise"
                    android:textSize="18sp" />
            </LinearLayout>

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>